--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style/style.css">
+    
 
-<title>China Elite</title> 
+<title>Shanghai | China</title> 
