--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style/style.css">
-    
+    <link rel="icon" href="media/Nightview.jpeg">
 
-<title>Shanghai | China</title> 
+<title>Shanghai | CHINA</title> 
+</head>
+<body>
+    <header>
+        <div class="heading-block">
+            
+        </div>
+    </header>
+</body>
+  
