--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
 <body>
     <header>
         <div class="heading-block">
-            
+        <img src="media/Nightsky.jpg"><img
+            <h1 class="heading-text">
+                <p id="visit">Visit</p>
+                <p id="hai">Shanghai</p>
+            </h1>
         </div>
     </header>
 </body>
