--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="heading-block">
-        <img src="media/Nightsky.jpg"><img
+        <img src="media/Nightsky.jpg">
             <h1 class="heading-text">
                 <p id="visit">Visit</p>
                 <p id="hai">Shanghai</p>
